Lab 7 доделать кодагенер
